basic table created

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,8 @@
     <script src="phone-list/phone-list.component.js"></script>
     <script src="phone-detail/phone-detail.module.js"></script>
     <script src="phone-detail/phone-detail.component.js"></script>
+    <script src="zygarde-counter/zygarde-counter.module.js"></script>
+    <script src="zygarde-counter/zygarde-counter.component.js"></script>
   </head>
   <body>
     <!-- Use a custom component to render a list of phones -->
