scroll to top button added

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>Rotom-Dex-Evolved</title>
     <!-- Load stylesheets -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
     <link rel="stylesheet" href="app.css" />
     <!-- Load scripts -->
     <script src="bower_components/angular/angular.min.js"></script>
@@ -18,5 +19,7 @@
   <body>
     <!-- Use a custom component to render a list of phones -->
     <div ng-view></div>
+    <!-- Return to Top Button -->
+    <scroll-on-click></scroll-on-click>
   </body>
 </html>
