--- a/app/zygarde-counter/zygarde-counter.template.html
+++ b/app/zygarde-counter/zygarde-counter.template.html
@@ -1,5 +1,5 @@
 <div class="container-fluid mobile-font">
-  <!-- The Modal -->
+  <!-- Image Modal -->
   <div id="myModal" class="modal" onclick="document.getElementById('myModal').style.display='none'">
     <!-- The Close Button -->
     <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
@@ -8,6 +8,7 @@
     <!-- Modal Caption (Image Text) -->
     <div id="caption"></div>
   </div>
+  <!-- Zygarde Cell Table -->
   <center>
     <div class="table-responsive">
       <p>
