--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <title>Rotom-Dex-Evolved</title>
     <!-- Load stylesheets -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="app.css" />
     <!-- Load scripts -->
     <script src="bower_components/angular/angular.min.js"></script>
