befre something crazy happens

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
     <script src="zygarde-counter/zygarde-counter.module.js"></script>
@@ -20,6 +21,6 @@
     <!-- Use a custom component to render a list of phones -->
     <div ng-view></div>
     <!-- Return to Top Button -->
-    <scroll-on-click></scroll-on-click>
+    <!-- <scroll-on-click></scroll-on-click> -->
   </body>
 </html>
