onchange through DOM for select options

--- a/app/zygarde-counter/zygarde-counter.template.html
+++ b/app/zygarde-counter/zygarde-counter.template.html
@@ -16,12 +16,11 @@
     </div>
   </div>
   <center>
-    <!-- Current View -->
-    <div id= 'currentView'>
-    </div>
     <!-- Test Views -->
     <h1>Current Cell</h1>
-    <div id= 'currCell'>
+    <div id= 'currentView'>
+      <select id="currentSelect">
+      </select>
     </div>
     <h1>Cells Collected</h1>
     <table class="table table-borderless table-fit">
