--- a/app/zygarde-counter/zygarde-counter.template.html
+++ b/app/zygarde-counter/zygarde-counter.template.html
@@ -10,18 +10,20 @@
   </div>
       Cells Collected:
   <div class="progress">
-    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
-    aria-valuenow="{{$ctrl.progress}}" aria-valuemin="0" aria-valuemax="100" style="width:{{$ctrl.progress}}%">
-      {{$ctrl.progress}}/100
+    <div id="progressBar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
+    aria-valuemin="0" aria-valuemax="100">
     </div>
   </div>
   <center>
-    <!-- Test Views -->
+    <!-- Currently selected cell -->
     <h1>Current Cell</h1>
-    <div id= 'currentView'>
+    <div>
       <select id="currentSelect">
       </select>
+      <div id='currentView'>
+      </div>
     </div>
+    <!-- Cells collected so far -->
     <h1>Cells Collected</h1>
     <table class="table table-borderless table-fit">
       <thead>
