dynamically replace onclick function on collectButton

--- a/app/zygarde-counter/zygarde-counter.template.html
+++ b/app/zygarde-counter/zygarde-counter.template.html
@@ -37,7 +37,7 @@
           </tr>
           <tr>
             <td><b>Collected?<b></td>
-            <td>PUT BUTTON HERE</td>
+            <td><center><i id="collectButton" class="fa fa-check-square fa-5x" aria-hidden="true" ></i></center></td>
           </tr>
         </tbody>
       </br>
