--- a/app/zygarde-counter/zygarde-counter.template.html
+++ b/app/zygarde-counter/zygarde-counter.template.html
@@ -8,16 +8,21 @@
     <!-- Modal Caption (Image Text) -->
     <div id="caption"></div>
   </div>
-      Cells Collected:
+
+  <!-- Progress Bar -->
+  Cells Collected:
   <div class="progress">
     <div id="progressBar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
     aria-valuemin="0" aria-valuemax="100">
     </div>
   </div>
+
+  <!-- Centered content -->
   <center>
-    <!-- Currently selected cell -->
+
+    <!-- Currently selected cell (if in progress) -->
     <h1>Current Cell</h1>
-    <div>
+    <div id="currentCell">
       <table class="table table-striped table-fit">
         <tbody>
           <tr>
@@ -43,19 +48,24 @@
       </br>
       </table>
     </div>
+
     <!-- Cells collected so far -->
     <h1>Cells Collected</h1>
-    <table class="table table-striped table-fit">
-      <thead>
-        <tr>
-          <th>Image</th>
-          <th><b>Island<b></th>
-          <th><b>Location<b></th>
-          <th><b>Undo?<b></th>
-        </tr>
-      </thead>
-      <tbody id="collectedBody">
-      </tbody>
-    </table>
+    <div id="collectedDiv">
+      <table class="table table-striped table-fit">
+        <thead>
+          <tr>
+            <th>Image</th>
+            <th><b>Island<b></th>
+            <th><b>Location<b></th>
+            <th><b>Undo?<b></th>
+          </tr>
+        </thead>
+        <tbody id="collectedBody">
+        </tbody>
+      </table>
+    </div>
+
   </center>
+
 </div>
