--- a/app/zygarde-counter/zygarde-counter.template.html
+++ b/app/zygarde-counter/zygarde-counter.template.html
@@ -1,4 +1,7 @@
-<div class="container-fluid mobile-font">
+<center>
+
+<div class="mobile-font">
+
   <!-- Image Modal -->
   <div id="myModal" class="modal" onclick="document.getElementById('myModal').style.display='none'">
     <!-- The Close Button -->
@@ -9,63 +12,47 @@
     <div id="caption"></div>
   </div>
 
-  <!-- Progress Bar -->
-  Cells Collected:
-  <div class="progress">
-    <div id="progressBar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
-    aria-valuemin="0" aria-valuemax="100">
-    </div>
+  <!-- Currently selected cell (if in progress) -->
+  <div id="currentDiv">
+    <table class="table table-fit">
+      <tbody>
+        <tr>
+          <img id="currentImg" src="" alt="" width="500" height="500">
+        <div class="image-caption-font">Click on the image to enlarge it!</div>
+        </tr>
+        <tr>
+          <td><b>Island</b></td>
+          <td><select id="currentSelect"></select></td>
+        </tr>
+        <tr>
+          <td><b>Location<b></td>
+          <td id="currentLocation"></td>
+        </tr>
+        <tr>
+          <td><b>Notes<b></td>
+            <td id="currentNotes"></td>
+        </tr>
+        <!-- Progress Bar -->
+        <tr valign="middle">
+          <td><b>Progress</b></td>
+          <td>
+              <div class="progress">
+                <div id="progressBar"
+                class="progress-bar progress-bar-success progress-bar-striped active progress-font"
+                role="progressbar" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td><b>Collected?<b></td>
+          <td><center><i id="collectButton" class="fa fa-check-square fa-5x" aria-hidden="true" ></i></center></td>
+        </tr>
+      </tbody>
+    </br>
+    </table>
   </div>
-
-  <!-- Centered content -->
-  <center>
-
-    <!-- Currently selected cell (if in progress) -->
-    <h1>Current Cell</h1>
-    <div id="currentCell">
-      <table class="table table-striped table-fit">
-        <tbody>
-          <tr>
-            <img id="currentImg" src="" alt="" width="500" height="500">
-          </tr>
-          <tr>
-            <td><b>Island</b></td>
-            <td><select id="currentSelect"></select></td>
-          </tr>
-          <tr>
-            <td><b>Location<b></td>
-            <td id="currentLocation"></td>
-          </tr>
-          <tr>
-            <td><b>Notes<b></td>
-              <td id="currentNotes"></td>
-          </tr>
-          <tr>
-            <td><b>Collected?<b></td>
-            <td><center><i id="collectButton" class="fa fa-check-square fa-5x" aria-hidden="true" ></i></center></td>
-          </tr>
-        </tbody>
-      </br>
-      </table>
-    </div>
-
-    <!-- Cells collected so far -->
-    <h1>Cells Collected</h1>
-    <div id="collectedDiv">
-      <table class="table table-striped table-fit">
-        <thead>
-          <tr>
-            <th>Image</th>
-            <th><b>Island<b></th>
-            <th><b>Location<b></th>
-            <th><b>Undo?<b></th>
-          </tr>
-        </thead>
-        <tbody id="collectedBody">
-        </tbody>
-      </table>
-    </div>
-
-  </center>
-
 </div>
+
+</center>
