playing around with background CSS

--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,11 @@
     <script src="zygarde-counter/zygarde-counter.component.js"></script>
   </head>
   <body>
-    <!-- Use a custom component to render a list of phones -->
-    <div ng-view></div>
-    <!-- Return to Top Button -->
-    <!-- <scroll-on-click></scroll-on-click> -->
+    <div class="overlay">
+      <!-- Use a custom component to render a list of phones -->
+      <div ng-view></div>
+      <!-- Return to Top Button -->
+      <!-- <scroll-on-click></scroll-on-click> -->
+    </div>
   </body>
 </html>
