--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html ng-app="Rotom-Dex-Evolved">
   <head>
+    <link rel="shortcut icon" href="favicon.ico" />
     <meta charset="utf-8">
     <title>Rotom-Dex-Evolved</title>
     <!-- Load stylesheets -->
