toastr notification + sound on cellCollect()

--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html ng-app="Rotom-Dex-Evolved">
   <head>
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <meta charset="utf-8">
-    <title>Rotom-Dex-Evolved</title>
+    <title>Rotom Dex: EVOLVED </title>
     <!-- Load stylesheets -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"/>
     <link rel="stylesheet" href="app.css" />
     <!-- Load scripts -->
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
     <script src="zygarde-counter/zygarde-counter.module.js"></script>
