tfw position was fixed in CSS (scrollbar returns)

--- a/app/zygarde-counter/zygarde-counter.template.html
+++ b/app/zygarde-counter/zygarde-counter.template.html
@@ -47,6 +47,17 @@
           <td class="black-bg-red-font"><b>Collected?<b></td>
           <td class="red-bg-white-font"><center><i id="collectButton" class="fa fa-check-square fa-5x white-bg-black-font" aria-hidden="true" ></i></center></td>
         </tr>
+        <tr>
+          <td class="black-bg-red-font"><b>Reset?<b></td>
+          <td class="red-bg-black-font" >
+            <center>
+              <div class="transparent-black" id="resetText">Reveal yourself </div>
+              <div class="black-bg-red-font" id="resetButton"></div>
+          </center>
+
+
+          </td>
+        </tr>
       </tbody>
     </br>
     </table>
