--- a/app/zygarde-counter/zygarde-counter.template.html
+++ b/app/zygarde-counter/zygarde-counter.template.html
@@ -17,32 +17,32 @@
     <table class="table table-borderless table-fit">
       <tbody>
         <tr>
-          <img id="currentImg" src="" alt="" width="490" height="490">
+          <img id="currentImg" src="" alt="" width="500" height="500">
         </tr>
-        <tr class="transparent-black" valign="middle" >
-          <td colspan="2">
-            <div class="progress">
-              <div id="progressBar"
-              class="progress-bar progress-bar-success progress-bar-striped active progress-font"
-              role="progressbar" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-            <i valign="middle" class='glyphicon glyphicon-remove-sign fa-1x' aria-hidden='true' ng-click="$ctrl.undoCell()"/>
-          </td>
-        </tr>
-        <tr class="black-bg-red-font" valign="middle">
-          <td align="center"><select id="currentSelect" class="black-bg-red-font"></select></td>
-          <td align="center" valign="middle">
-            <i class="glyphicon glyphicon-circle-arrow-left  gi-1-half-x" aria-hidden="true"></i>
-            <span></span>
-            <i class="glyphicon glyphicon-circle-arrow-right gi-1-half-x" aria-hidden="true"></i>
+        <tr class="transparent-black">
+          <td align="center"><select id="currentSelect" class="black-bg-white-font"></select></td>
+          <td align="center">
+            <i class="glyphicon glyphicon-circle-arrow-up   gi-1-half-x" aria-hidden="true"></i>
+            <i class="glyphicon glyphicon-circle-arrow-down gi-1-half-x" aria-hidden="true"></i>
           </td>
         </tr>
         <tr>
-          <td class="black-bg-red-font"><b>Location<b></td>
-          <td class="red-bg-black-font" id="currentLocation" ></td>
+          <td class="red-bg-white-font" colspan="2" id="currentLocation" ></td>
         </tr>
         <!-- Progress Bar -->
+        <tr valign="middle">
+          <td class="black-bg-red-font"><b>Progress</b></td>
+          <td class="red-bg-white-font">
+              <div class="progress">
+                <div id="progressBar"
+                class="progress-bar progress-bar-success progress-bar-striped active progress-font"
+                role="progressbar" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <i class='glyphicon glyphicon-remove-sign fa-1x' aria-hidden='true' ng-click="$ctrl.undoCell()"/>
+          </td>
+        </tr>
         <tr>
           <td class="black-bg-red-font"><b>Collected?<b></td>
           <td class="red-bg-white-font"><center><i id="collectButton" class="fa fa-check-square fa-5x white-bg-black-font" aria-hidden="true" ></i></center></td>
